# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "all-lap-python"
version = "0.1.0"
authors = ["Jaeseung Han <thestudentofkyoto@gmail.com>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.0"

[dependencies.all-lap-rust]
path = "all-lap-rust"

[dependencies.pyo3]
version = "0.14.0"
features = ["extension-module"]
